Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26201

tweetsearch demo output a lot of warnings

    XMLWordPrintable

Details

    Description

      try to search word:qt, enter and see a lot of glyph distance-field warnings

      :\Users\chayin\Qt5.0.0beta\Src\Qt\5.0.0\qtdeclarative\examples\demos\tweetsearch>qmlscene tweetsearch.qml
      Reload
      10 new tweets
      Warning: distance-field glyph is not available with index 4485
      Warning: distance-field glyph is not available with index 20689
      Warning: distance-field glyph is not available with index 20658
      Warning: distance-field glyph is not available with index 14211
      Warning: distance-field glyph is not available with index 20669
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20648
      Warning: distance-field glyph is not available with index 20721
      Warning: distance-field glyph is not available with index 20661
      Warning: distance-field glyph is not available with index 20719
      Warning: distance-field glyph is not available with index 20650
      Warning: distance-field glyph is not available with index 12445
      Warning: distance-field glyph is not available with index 20681
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20661
      Warning: distance-field glyph is not available with index 20678
      Warning: distance-field glyph is not available with index 20667
      Warning: distance-field glyph is not available with index 20650
      Warning: distance-field glyph is not available with index 20718
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20786
      Warning: distance-field glyph is not available with index 20753
      Warning: distance-field glyph is not available with index 20742
      Warning: distance-field glyph is not available with index 20693
      Warning: distance-field glyph is not available with index 20665
      Warning: distance-field glyph is not available with index 20692
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20689
      Warning: distance-field glyph is not available with index 13600
      Warning: distance-field glyph is not available with index 8930
      Warning: distance-field glyph is not available with index 6513
      Warning: distance-field glyph is not available with index 20719
      Warning: distance-field glyph is not available with index 20722
      Warning: distance-field glyph is not available with index 20677
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20688
      Warning: distance-field glyph is not available with index 20692
      Warning: distance-field glyph is not available with index 20657
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20710
      Warning: distance-field glyph is not available with index 20651
      Warning: distance-field glyph is not available with index 20622
      Warning: distance-field glyph is not available with index 20622
      Warning: distance-field glyph is not available with index 20622
      Warning: distance-field glyph is not available with index 14052
      Warning: distance-field glyph is not available with index 9422
      Warning: distance-field glyph is not available with index 10885
      Warning: distance-field glyph is not available with index 20712
      Warning: distance-field glyph is not available with index 4485
      Warning: distance-field glyph is not available with index 10508
      Warning: distance-field glyph is not available with index 10698
      Warning: distance-field glyph is not available with index 20685
      Warning: distance-field glyph is not available with index 14211
      Warning: distance-field glyph is not available with index 20722
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 14052
      Warning: distance-field glyph is not available with index 9422
      Warning: distance-field glyph is not available with index 20669
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20671
      Warning: distance-field glyph is not available with index 20655
      Warning: distance-field glyph is not available with index 4485
      Warning: distance-field glyph is not available with index 20689
      Warning: distance-field glyph is not available with index 20658
      Warning: distance-field glyph is not available with index 14211
      Warning: distance-field glyph is not available with index 20669
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20648
      Warning: distance-field glyph is not available with index 20721
      Warning: distance-field glyph is not available with index 20661
      Warning: distance-field glyph is not available with index 20719
      Warning: distance-field glyph is not available with index 20650
      Warning: distance-field glyph is not available with index 12445
      Warning: distance-field glyph is not available with index 20681
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20661
      Warning: distance-field glyph is not available with index 20678
      Warning: distance-field glyph is not available with index 20667
      Warning: distance-field glyph is not available with index 20650
      Warning: distance-field glyph is not available with index 20718
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20786
      Warning: distance-field glyph is not available with index 20753
      Warning: distance-field glyph is not available with index 20742
      Warning: distance-field glyph is not available with index 20693
      Warning: distance-field glyph is not available with index 20665
      Warning: distance-field glyph is not available with index 20692
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20689
      Warning: distance-field glyph is not available with index 13600
      Warning: distance-field glyph is not available with index 8930
      Warning: distance-field glyph is not available with index 6513
      Warning: distance-field glyph is not available with index 20719
      Warning: distance-field glyph is not available with index 20722
      Warning: distance-field glyph is not available with index 20677
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20688
      Warning: distance-field glyph is not available with index 20692
      Warning: distance-field glyph is not available with index 20657
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20710
      Warning: distance-field glyph is not available with index 20651
      Warning: distance-field glyph is not available with index 20622
      Warning: distance-field glyph is not available with index 20622
      Warning: distance-field glyph is not available with index 20622
      Warning: distance-field glyph is not available with index 4485
      Warning: distance-field glyph is not available with index 20689
      Warning: distance-field glyph is not available with index 20658
      Warning: distance-field glyph is not available with index 14211
      Warning: distance-field glyph is not available with index 20669
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20648
      Warning: distance-field glyph is not available with index 20721
      Warning: distance-field glyph is not available with index 20661
      Warning: distance-field glyph is not available with index 20719
      Warning: distance-field glyph is not available with index 20650
      Warning: distance-field glyph is not available with index 12445
      Warning: distance-field glyph is not available with index 20681
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20661
      Warning: distance-field glyph is not available with index 20678
      Warning: distance-field glyph is not available with index 20667
      Warning: distance-field glyph is not available with index 20650
      Warning: distance-field glyph is not available with index 20718
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20786
      Warning: distance-field glyph is not available with index 20753
      Warning: distance-field glyph is not available with index 20742
      Warning: distance-field glyph is not available with index 20693
      Warning: distance-field glyph is not available with index 20665
      Warning: distance-field glyph is not available with index 20692
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20689
      Warning: distance-field glyph is not available with index 13600
      Warning: distance-field glyph is not available with index 8930
      Warning: distance-field glyph is not available with index 6513
      Warning: distance-field glyph is not available with index 20719
      Warning: distance-field glyph is not available with index 20722
      Warning: distance-field glyph is not available with index 20677
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20688
      Warning: distance-field glyph is not available with index 20692
      Warning: distance-field glyph is not available with index 20657
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20710
      Warning: distance-field glyph is not available with index 20651
      Warning: distance-field glyph is not available with index 20622
      Warning: distance-field glyph is not available with index 20622
      Warning: distance-field glyph is not available with index 20622
      Reload
      0 new tweets
      Warning: distance-field glyph is not available with index 4485
      Warning: distance-field glyph is not available with index 20689
      Warning: distance-field glyph is not available with index 20658
      Warning: distance-field glyph is not available with index 14211
      Warning: distance-field glyph is not available with index 20669
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20648
      Warning: distance-field glyph is not available with index 20721
      Warning: distance-field glyph is not available with index 20661
      Warning: distance-field glyph is not available with index 20719
      Warning: distance-field glyph is not available with index 20650
      Warning: distance-field glyph is not available with index 12445
      Warning: distance-field glyph is not available with index 20681
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20661
      Warning: distance-field glyph is not available with index 20678
      Warning: distance-field glyph is not available with index 20667
      Warning: distance-field glyph is not available with index 20650
      Warning: distance-field glyph is not available with index 20718
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20786
      Warning: distance-field glyph is not available with index 20753
      Warning: distance-field glyph is not available with index 20742
      Warning: distance-field glyph is not available with index 20693
      Warning: distance-field glyph is not available with index 20665
      Warning: distance-field glyph is not available with index 20692
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20689
      Warning: distance-field glyph is not available with index 13600
      Warning: distance-field glyph is not available with index 8930
      Warning: distance-field glyph is not available with index 6513
      Warning: distance-field glyph is not available with index 20719
      Warning: distance-field glyph is not available with index 20722
      Warning: distance-field glyph is not available with index 20677
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20688
      Warning: distance-field glyph is not available with index 20692
      Warning: distance-field glyph is not available with index 20657
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20710
      Warning: distance-field glyph is not available with index 20651
      Warning: distance-field glyph is not available with index 20622
      Warning: distance-field glyph is not available with index 20622
      Warning: distance-field glyph is not available with index 20622
      Warning: distance-field glyph is not available with index 14052
      Warning: distance-field glyph is not available with index 9422
      Warning: distance-field glyph is not available with index 10885
      Warning: distance-field glyph is not available with index 20712
      Warning: distance-field glyph is not available with index 4485
      Warning: distance-field glyph is not available with index 10508
      Warning: distance-field glyph is not available with index 10698
      Warning: distance-field glyph is not available with index 20685
      Warning: distance-field glyph is not available with index 14211
      Warning: distance-field glyph is not available with index 20722
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 14052
      Warning: distance-field glyph is not available with index 9422
      Warning: distance-field glyph is not available with index 20669
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20671
      Warning: distance-field glyph is not available with index 20655
      Warning: distance-field glyph is not available with index 4485
      Warning: distance-field glyph is not available with index 20689
      Warning: distance-field glyph is not available with index 20658
      Warning: distance-field glyph is not available with index 14211
      Warning: distance-field glyph is not available with index 20669
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20648
      Warning: distance-field glyph is not available with index 20721
      Warning: distance-field glyph is not available with index 20661
      Warning: distance-field glyph is not available with index 20719
      Warning: distance-field glyph is not available with index 20650
      Warning: distance-field glyph is not available with index 12445
      Warning: distance-field glyph is not available with index 20681
      Warning: distance-field glyph is not available with index 20684
      Warning: distance-field glyph is not available with index 20661
      Warning: distance-field glyph is not available with index 20678
      Warning: distance-field glyph is not available with index 20667
      Warning: distance-field glyph is not available with index 20650
      Warning: distance-field glyph is not available with index 20718
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20623
      Warning: distance-field glyph is not available with index 20786
      Warning: distance-field glyph is not available with index 20753
      Warning: distance-field glyph is not available with index 20742
      Warning: distance-field glyph is not available with index 20693
      Warning: distance-field glyph is not available with index 20665
      Warning: distance-field glyph is not available with index 20692
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20689
      Warning: distance-field glyph is not available with index 13600
      Warning: distance-field glyph is not available with index 8930
      Warning: distance-field glyph is not available with index 6513
      Warning: distance-field glyph is not available with index 20719
      Warning: distance-field glyph is not available with index 20722
      Warning: distance-field glyph is not available with index 20677
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20708
      Warning: distance-field glyph is not available with index 20688

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            charles Charles Yin (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes