Use resolved font name for key in distance field cache.

On windows at least multiple QRawFonts can share a family name but
have different font engines.  Prefer the faceId information when
constructing a key for the distance field cache to avoid a conflict.

Task-number: QTBUG-26201
Change-Id: I9111f22045eb35e6535039117ec4184075e778a4
Reviewed-by: Yoann Lopes <yoann.lopes@nokia.com>